adjust import path

--- a/c_test/Makefile
+++ b/c_test/Makefile
@@ -1,3 +1,3 @@
 lanczos: lanczos.c
 	if not exist build mkdir build
-	clang -Wall -Wextra -Ideps lanczos.c -o build/lanczos.exe
+	clang -Wall -Wextra -I../deps lanczos.c -o build/lanczos.exe
